add simple loging form

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>delivary meeee</title>
-    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+    <link rel="icon" href="data:,">
 </head>
 <body>
-    hiiii
+    <form method="POST" id="form1" action="http://localhost:3000/register">
+	<input type="text" name="n" value="email" />
+	<input type="password" name="pss" value="passwd" />
+	<input type="submit" name="button" value="send" />
+    </form>
 </body>
 </html>
