--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>delivary meeee</title>
+    <title>index</title>
     <link rel="icon" href="data:,">
 </head>
 <body>
+    some text about project and how it can give leverage to backery owners
     <form method="POST" id="form1" action="http://localhost:3000/register">
 	<input type="text" name="n" value="email" />
 	<input type="password" name="pss" value="passwd" />
