set up shadow-cljs and helix for clojurescript

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,8 @@
 </head>
 <body>
     some text about project and how it can give leverage to backery owners
-    <form method="POST" id="form1" action="http://localhost:3000/register">
-	<input type="text" name="n" value="email" />
-	<input type="password" name="pss" value="passwd" />
-	<input type="submit" name="button" value="send" />
-    </form>
+    okay
+    <div id="app"></div>
+    <script src="/js/register.js"></script>
 </body>
 </html>
