--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
     <link rel="icon" href="data:,">
+    <link rel="stylesheet" href="index.css" type="text/css" media="screen" />
+    <style>
+     .button{
+	 @apply w-full border-gray-300 rounded-lg shadow-sm focus:border-accent focus:ring-accent;
+     }
+    </style>
 </head>
-<body>
-    some text about project and how it can give leverage to backery owners
-    okay
-    <div id="app"></div>
-    <script src="/js/register.js"></script>
+<body class="sm:w-full md:w-1/2 md:mx-auto min-h-screen relative">
+    <div class="flex flex-row justify-between md:px-4 py-2 bg-secondery">
+	<span class="font-amiri text-lg">أطباق سُهيل</span>
+	<button class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 pl-5" type="button">حسابي</button>
+    </div>
+    <section class="bg-gradient-to-b from-secondery to-background h-1/4 md:px-4 py-8">
+	<picture>
+	    <img alt="" src="/resources/static/chef-hat.svg"/>
+	</picture>
+	<aside>
+	    <h1>وصفات سهلة</h1>
+	    <p>أفضل موقع لمشاركة الوصفات</p>
+	    <p>شارك عملائك في لحظات</p>
+	</aside>
+	<button class="bg-primary text-white">
+	    انشء حساب
+	</button>
+    </section>
+    <div class="bg-yellow-200"> Hi I'm hellow</div>
+    <footer class="flex flex-row justify-center absolute bottom-0 w-full py-4 bg-accent2 text-white font-amiri font-semibold">
+	سليم خطيب
+    </footer>
+    
+    <!-- <div id="app"></div>
+	 <script src="/js/register.js"></script>
+    -->
 </body>
 </html>
