index.html for phone screen without media

--- a/public/index.html
+++ b/public/index.html
@@ -36,14 +36,17 @@
 	</button>
     </section>
     <article class="grow">
-	<section class="h-screen bg-black">
+	<section class="h-screen">
 	    <div class="bg-oil px-4 py-4">
 		<h3 class="text-3xl">انشء حساب</h3>
 		<p class="w-[45ch]">يمكن بدأ مجانا وبدون ايميل</p>
 	    </div>
-	    <picture class="mb-2 aspect-phone w-[300px]">
-		<div class="w-full h-full my-1 bg-gray-200" alt="" src=""/>
+	    <picture>
+		<div class="hover:animate-pulse aspect-phone md:aspect-desk md:my-8 md:mx-4 bg-gray-200"w alt="" src="">
+		    yooooo
+		</div>
 	    </picture>
+	    
 	</section>
 	<section class="h-screen">
 	    <div class="bg-oil px-4 py-4">
@@ -54,7 +57,10 @@
 		</p>
 	    </div>
 	    <picture>
-		<div class="w-[250px] h-[250px] my-1 bg-gray-200" alt="" src=""/>
+		<div class=" aspect-phone md:aspect-desk md:my-8 md:mx-4 bg-gray-200"w alt="" src="">
+		    yooooo
+		</div>
+		
 	    </picture>
 	</section>
 	<section class="h-screen">
@@ -65,7 +71,9 @@
 		</p>
 	    </div>
 	    <picture>
-		<div class="w-[250px] h-[250px] my-1 bg-gray-200" alt="" src=""/>
+		<div class="aspect-phone md:aspect-desk md:my-8 md:mx-4 bg-gray-200"w alt="" src="">
+		    yooooo
+		</div>
 	    </picture>
 	</section>
     </article>
