--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
     <link rel="icon" href="data:,">
-    <link rel="stylesheet" href="index.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="/assets/css/index.css" type="text/css" media="screen" />
     <style>
      .button{
 	 @apply w-full border-gray-300 rounded-lg shadow-sm focus:border-accent focus:ring-accent;
