improve recipe.html

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 		<p class="w-[45ch]">يمكن بدأ مجانا وبدون ايميل</p>
 	    </div>
 	    <picture>
-		<div class="hover:animate-pulse aspect-phone md:aspect-desk md:my-8 md:mx-4 bg-gray-200"w alt="" src="">
+		<div class="hover:animate-pulse aspect-phone md:aspect-desk md:my-8 md:mx-4 bg-gray-200">
 		    yooooo
 		</div>
 	    </picture>
