--- a/public/register.html
+++ b/public/register.html
@@ -8,16 +8,19 @@
     <link rel="icon" href="data:,">
 </head>
 <body>
-    <!-- <form method="POST" id="register-form">
-	 <label for="email">ايميل:</label>
-	 <input type="email" id="email" name="email" placeholder="name@email.com" autocomplete="email" autocorrect="off" required /><br>
-	 <label for="password">كلمة سر</label>
-	 <input type="password" id="password" name="password"  /><br>
-	 <label for="pss2" >اعد كتابة كلمة سر</label>
-	 <input type="password" id="pss2"/>
-	 <button>سجل</button>
-	 </form> -->
-    <div id="root"></div>
-    <script src="/js/register.js"></script>
+    <form method="POST" action="/echo" id="register-form" enctype="multipart/form-data">
+	<!-- <label for="email">ايميل:</label> -->
+	<!-- <input type="email" id="email" name="email" placeholder="name@email.com" autocomplete="email" autocorrect="off" required /><br> -->
+	<!-- <label for="password">كلمة سر</label> -->
+	<!-- <input type="password" id="password" name="password"  /><br> -->
+	<!-- <label for="pss2" >اعد كتابة كلمة سر</label> -->
+	<!-- <input type="password" id="pss2"/> -->
+	<input name="medias" type="file" value=""/>
+	<label for="text">recipe desc</label>
+	<input name="texts" id="text" type="text" value=""/>
+	<button>سجل</button>
+    </form>
+    <!-- <div id="root"></div> -->
+    <!-- <script src="/js/register.js"></script> -->
 </body>
 </html>
