fix typo in index.html and README.md

--- a/resources/pages/index.html
+++ b/resources/pages/index.html
@@ -53,7 +53,7 @@
 		<h3 class="text-3xl">سجل وصفه</h3>
 		<p class="w-[45ch]">
 		    سجل خطوات التحضير. يمكن اضافة صورة وفيديو ومؤقت.
-		    سوف يقوم نطامنا بقراءت الخطوات للمستخدم
+		    سوف يقوم نظامنا بقراءة الخطوات للمستخدم
 		</p>
 	    </div>
 	    <picture>
@@ -67,11 +67,11 @@
 	    <div class="bg-oil px-4 py-4">
 		<h3 class="text-3xl">شارك معجبيك</h3>
 		<p class="w-[45ch]">
-		    يمكن مشاركت وصفتين بالحساب المجاني والاف الوصفات بالحساب التجاري
+		    يمكن مشاركة وصفتين بالحساب المجاني والاف الوصفات بالحساب التجاري
 		</p>
 	    </div>
 	    <picture>
-		<div class="aspect-phone md:aspect-desk md:my-8 md:mx-4 bg-gray-200"w alt="" src="">
+		<div class="aspect-phone md:aspect-desk md:my-8 md:mx-4 bg-gray-200" alt="" src="">
 		    yooooo
 		</div>
 	    </picture>
