--- a/resources/pages/tmp.html
+++ b/resources/pages/tmp.html
@@ -8,6 +8,7 @@
 	<link rel="icon" href="data:,">
     </head>
     <body>
-	<a href="https://github.com/login/oauth/authorize?client_id={{client-id}}&redirect_uri={{redirect-uri}}">Login with GitHub</a>
+	<!-- <a href="https://github.com/login/oauth/authorize?client_id={{client-id}}&redirect_uri={{redirect-uri}}">Login with GitHub</a> -->
+	<a href="https://github.com/login/oauth/authorize?client_id={{client-id}}&redirect_uri=http://dwave.local:3000/signup">Login with GitHub</a>
     </body>
 </html>
