add links to tmp.html and organize static router.
and remove unused/old handlers

--- a/resources/pages/tmp.html
+++ b/resources/pages/tmp.html
@@ -10,5 +10,10 @@
     <body>
 	<!-- <a href="https://github.com/login/oauth/authorize?client_id={{client-id}}&redirect_uri={{redirect-uri}}">Login with GitHub</a> -->
 	<a href="https://github.com/login/oauth/authorize?client_id={{client-id}}&redirect_uri=http://dwave.local:3000/signup">Login with GitHub</a>
+	<a href="/index.html">index</a>
+	<a href="/dashboard">dashboard</a>
+	<a href="/echo">echo</a>
+	<a href="/recipes/make">make</a>
+	<a href="/recipes/cook/0">cook 0</a>
     </body>
 </html>
