add delete and filter functionality to /dashboard

--- a/resources/pages/index.html
+++ b/resources/pages/index.html
@@ -12,9 +12,9 @@
 	 @apply w-full border-gray-300 rounded-lg shadow-sm focus:border-accent focus:ring-accent;
      }
      .footer{
-	@apply sticky bottom-0;
+	 @apply sticky bottom-0;
      }
-	 /* class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 pl-5 border-2 border-black" */
+     /* class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 pl-5 border-2 border-black" */
     </style>
 </head>
 <body class="flex flex-col sm:w-full md:w-1/2 md:mx-auto min-h-screen relative">
@@ -39,7 +39,7 @@
 	<section class="h-screen">
 	    <div class="bg-oil px-4 py-4">
 		<h3 class="text-3xl">انشء حساب</h3>
-		<p class="w-[45ch]">يمكن بدأ مجانا وبدون ايميل</p>
+		<p class="max-w-[40ch]">يمكن بدأ مجانا وبدون ايميل</p>
 	    </div>
 	    <picture>
 		<div class="hover:animate-pulse aspect-phone md:aspect-desk md:my-8 md:mx-4 bg-gray-200">
@@ -51,7 +51,7 @@
 	<section class="h-screen">
 	    <div class="bg-oil px-4 py-4">
 		<h3 class="text-3xl">سجل وصفه</h3>
-		<p class="w-[45ch]">
+		<p class="max-w-[40ch]">
 		    سجل خطوات التحضير. يمكن اضافة صورة وفيديو ومؤقت.
 		    سوف يقوم نظامنا بقراءة الخطوات للمستخدم
 		</p>
@@ -66,7 +66,7 @@
 	<section class="h-screen">
 	    <div class="bg-oil px-4 py-4">
 		<h3 class="text-3xl">شارك معجبيك</h3>
-		<p class="w-[45ch]">
+		<p class="max-w-[40ch]">
 		    يمكن مشاركة وصفتين بالحساب المجاني والاف الوصفات بالحساب التجاري
 		</p>
 	    </div>
@@ -76,8 +76,6 @@
 		</div>
 	    </picture>
 	</section>
-    </article>
-    <div class="bg-yellow-200"> Salam Sailor</div>
     </article>
     <footer class="flex flex-row justify-center w-full py-4 bg-accent2 text-white font-amiri font-semibold leading-3">
 	سليم خطيب
@@ -93,8 +91,5 @@
 	 }
      });
     </script>
-    <!-- <div id="app"></div>
-	 <script src="/js/register.js"></script>
-    -->
 </body>
 </html>
